--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 * {
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 body {
@@ -8,9 +8,20 @@ body {
 main {
     display: flex;
     flex-wrap: wrap;
-    max-width: 1300px;
+    max-width: 1100px;
     margin: 0 auto;
     padding-left: 3rem;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+h3 {
+    font-size: 1.3rem;
+    font-weight: bold;
 }
 .navbar {
     background-color: #06131f;
@@ -23,4 +34,14 @@ main {
     margin-right: 3rem;
     border-radius: 0.5rem;
     color: white;
+    text-align: center;
+}
+
+.poster-wrapper {
+    width: 100%;
+    padding: 1.5rem 3.5rem;
+}
+
+.disc-info {
+   padding: 0 1.5rem 1.5rem; 
 }
