--- a/style/style.css
+++ b/style/style.css
@@ -27,6 +27,10 @@ h3 {
     background-color: #06131f;
 }
 
+.navbar-brand img {
+    width: 50px;
+}
+
 .disc-card {
     background-color: #112030;
     width: calc((100% / 3) - 3rem);
