--- a/style/style.css
+++ b/style/style.css
@@ -5,11 +5,12 @@
 body {
     background-color: #1d2d3c;
 }
+
 main {
     display: flex;
     flex-wrap: wrap;
     max-width: 1100px;
-    margin: 0 auto;
+    margin: 3rem auto;
     padding-left: 3rem;
 }
 
